--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -283,6 +283,7 @@ body {
     min-height: 20rem;
     border-radius: 40px;
     overflow: hidden;
+    position: relative;
 
     @include respond(phone) {
         border-radius: 20px;
@@ -326,6 +327,18 @@ body {
 
         li {
             margin-left: 1.6rem;
+        }
+        .alert {
+            width: auto;
+            position: absolute;
+            top: -27px;
+            left: 2%;
+            font-size: 1.2rem;
+        
+            @include respond(phone) {
+                left: 50%;
+                transform: translateX(-50%);
+            }
         }
     }
 }
@@ -406,7 +419,8 @@ body {
     width: 100%;
 
     &-person {
-        width: 50%;
+        justify-content: center;
+        // width: 50%;
 
         @include respond(phone) {
             width: 100%;
@@ -604,19 +618,71 @@ body {
     }
 }
 
+.test2 {
+    opacity: 0;
+}
 
-.alert {
-    width: auto;
-    position: absolute;
-    top: -27px;
-    left: 2%;
-    font-size: 1.2rem;
+.modal {
+    &-test {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #3e3d3ba8;
+        z-index: 5;
+    }
 
-    @include respond(phone) {
+    &-box {
+        background-color: $color-white;
+        width: fit-content;
+        display: block;
+        position: absolute;
+        top: 50%;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translate(-50%,-50%);
+        border-radius: 15px;
+        .modal-header {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            .error {
+                color: red;
+                font-size: 10rem;
+            }
+            .close {
+                position: absolute;
+                cursor: pointer;
+                top: 5px;
+                right: 5px;
+            }
+        }
+
+        .modal-body {
+            font-size: 2rem;
+            padding: 1rem;
+        }
+
+        .modal-footer {
+
+        }
     }
 }
+
+
+// .alert {
+//     width: auto;
+//     position: absolute;
+//     top: -27px;
+//     left: 2%;
+//     font-size: 1.2rem;
+
+//     @include respond(phone) {
+//         left: 50%;
+//         transform: translateX(-50%);
+//     }
+// }
 
 ///////// button ///////
 .btn {
@@ -689,6 +755,11 @@ body {
     &--animated {
         animation: moveDown .5s ease-out .75s;
         animation-fill-mode: backwards;
+    }
+
+    &-block {
+        width: fit-content;
+        border: 1px solid #007bff;
     }
 }
 
