modal done inserted

--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1603,4 +1603,19 @@
       </div>
     </div>
   </div>
+  <!-- <div class="modal-done" id="modal-done" (click)="closeTest()">
+    <div class="modal-box">
+      <div class="modal-header">
+        <span class="material-icons error" style="color:red;">
+          error_outline
+          </span>
+          <span class="material-icons close" id="close" (click)="closeTest()">
+            clear
+            </span>
+      </div>
+      <div class="modal-body">
+        gracias por su colaboración, valoramos su tiempo y atención.
+      </div>
+    </div>
+  </div> -->
 </div>
