--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -65,9 +65,9 @@
             <div class="input-container">
               <select name="gender" id="gender" formControlName="genero" [class.is-invalid]="generoNoValido">
                 <option value="" disabled>Selecciona tu género</option>
-                <option value="M">masculino</option>
-                <option value="F">femenino</option>
-                <option value="O">otro</option>
+                <option value="M">Masculino</option>
+                <option value="F">Femenino</option>
+                <option value="O">Otro</option>
               </select>
               <small *ngIf="generoNoValido" class="text-danger">
                 Seleccione una opción
@@ -152,9 +152,10 @@
       completamente voluntaria y requiere de su autorización y la información que sea consignada en el mismo se
       mantendrá de manera anónima, será confidencial y sólo será utilizada con fines de investigación. El tiempo
       estimado para la finalización de los cuestionarios que serán llevados a cabo por el menor de edad es de
-      aproximadamente una hora. Si Usted decide autorizar a su hijo a participar, significa que Usted ha leído y firmado
+      aproximadamente 20 minutos. Si Usted decide autorizar a su hijo a participar, significa que Usted ha leído y
+      firmado
       el formato de consentimiento informado y autoriza la participación de su hijo en el mismo. </p>
-    <h3 class="my-4">CONSENTIMIENTO INFORMADO <sup>1</sup> </h3>
+    <h3 class="my-4">ASENTIMIENTO INFORMADO <sup>1</sup> </h3>
     <h3>Documento de consentimiento informado para la autorización de menor de edad a participación en el estudio y
       aplicación de los instrumentos
       Maslach Burnout Inventory (MBI- Student) y
@@ -218,7 +219,7 @@
     <h3>¿CÓMO SERÁ LA PARTICIPACIÓN DE SU HIJO EN LA INVESTIGACIÓN?</h3>
     <p class="my-4">
       La participación de su hijo consiste en diligenciar los cuestionarios mencionados. Esto esto le tomará
-      aproximadamente 1 hora, dependiendo de la velocidad de respuesta. No hay respuestas ni buenas ni malas.
+      aproximadamente 20 minutos, dependiendo de la velocidad de respuesta. No hay respuestas ni buenas ni malas.
     </p>
     <h3>GARANTÍAS DE LA PARTICIPACIÓN DE SU HIJO</h3>
     <p class="mt-4">La participación de su hijo es completamente voluntaria y requiere de su previa autorización, además
@@ -357,7 +358,8 @@
         funcionamiento familiar y rendimiento académico en estudiantes del programa de psicología de la Universidad
         Santo Tomás.</b> Este proyecto es avalado por la Universidad Santo Tomás. Su participación es completamente
       voluntaria y la información aquí consignada se mantendrá anónima, es confidencial y sólo será utilizada con fines
-      de investigación. El tiempo estimado para la finalización de los cuestionarios es de aproximadamente una hora. Si
+      de investigación. El tiempo estimado para la finalización de los cuestionarios es de aproximadamente 20 minutos.
+      Si
       Usted decide responder, significa que Usted ha leído y firmado el formato de consentimiento informado y participa
       voluntariamente. </p>
     <h3 class="my-4">CONSENTIMIENTO INFORMADO <sup>1</sup> </h3>
@@ -424,8 +426,8 @@
       y largo plazo, contribuir con el mejoramiento de la calidad de vida estudiantil y la salud académica.</p>
     <h3>¿CÓMO SERÁ SU PARTICIPACIÓN EN LA INVESTIGACIÓN?</h3>
     <p class="my-4">
-      Su participación consiste en diligenciar los cuestionarios mencionados. Esto esto le tomará aproximadamente 1
-      hora, dependiendo de la velocidad de respuesta. Usted debe responder de la manera más honesta posible. No hay
+      Su participación consiste en diligenciar los cuestionarios mencionados. Esto esto le tomará aproximadamente 20
+      minutos, dependiendo de la velocidad de respuesta. Usted debe responder de la manera más honesta posible. No hay
       respuestas ni buenas ni malas.
     </p>
     <h3>GARANTÍAS DE SU PARTICIPACIÓN</h3>
@@ -638,7 +640,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>2. Creo que contribuyó efectivamente con las clases en la universidad</p>
+        <p>2. Creo que contribuyo efectivamente con las clases en la universidad</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -806,7 +808,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>5. me estimula conseguir objetivos en mis estudios</p>
+        <p>5. Me estimula conseguir objetivos en mis estudios</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1030,7 +1032,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>9. las actividades académicas de esta carrera me tienen emocionalmente agotado</p>
+        <p>9. Las actividades académicas de esta carrera me tienen emocionalmente agotado</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1142,7 +1144,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>11. he perdido interés en la carrera desde que empecé en la universidad</p>
+        <p>11. He perdido interés en la carrera desde que empecé en la universidad</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1198,7 +1200,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>12. He perdido entusiásmanos por mi carrera</p>
+        <p>12. He perdido entusiasmo por mi carrera</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1366,7 +1368,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>15 He aprendo muchas cosas interesantes durante mi carrera</p>
+        <p>15 He aprendido muchas cosas interesantes durante mi carrera</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1421,12 +1423,9 @@
       </div>
     </div>
     <button class="btn btn-success" (click)="test1Done()">SIGUIENTE</button>
-    
-
-    <!-- {{user.cuestionario1 | json}}  -->
   </div>
   <div class="test test2" *ngIf="test2" id="test2">
-    <h1 class="mb-5">A continuación se evaluará La percepción del funcionamiento familiar se indaga por medio del
+    <h1 class="mb-5">A continuación se evaluará la percepción del funcionamiento familiar, se indaga por medio del
       cuestionario APGAR-Familiar, que mide Adaptación (A), Participación (P), Gradiente de Recursos (G), Afectividad
       (A) y Recursos o Capacidad Resolutiva (R).
     </h1>
@@ -1583,39 +1582,40 @@
   <div class="dismiss" *ngIf="dismiss">
     <div class="alert alert-success" role="alert">
       <h4 class="alert-heading">Well done!</h4>
-      <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+      <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so
+        that you can see how spacing within an alert works with this kind of content.</p>
       <hr>
       <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
-    </div>    
+    </div>
   </div>
-  <div class="modal-test" id="modal-test" (click)="closeModal()">
+   <div class="modal-test" id="modal-test" (click)="closeModal()">
     <div class="modal-box">
       <div class="modal-header">
         <span class="material-icons error" style="color:red;">
           error_outline
-          </span>
-          <span class="material-icons close" id="close" (click)="closeModal()">
-            clear
-            </span>
+        </span>
+        <span class="material-icons close" id="close" (click)="closeModal()">
+          clear
+        </span>
       </div>
       <div class="modal-body">
         Por favor responda la pregunta {{question}}
       </div>
     </div>
-  </div>
-  <!-- <div class="modal-done" id="modal-done" (click)="closeTest()">
+  </div> 
+  <div class="modal-done" id="modal-done" (click)="closeTest()">
     <div class="modal-box">
       <div class="modal-header">
-        <span class="material-icons error" style="color:red;">
-          error_outline
+        <span class="material-icons check">
+        check_circle_outline
+        </span>
+        <span class="material-icons close" id="close" (click)="closeTest()">
+          clear
           </span>
-          <span class="material-icons close" id="close" (click)="closeTest()">
-            clear
-            </span>
       </div>
       <div class="modal-body">
-        gracias por su colaboración, valoramos su tiempo y atención.
+        Gracias por su colaboración, valoramos su tiempo y atención.
       </div>
     </div>
-  </div> -->
+  </div>
 </div>
