--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -289,12 +289,6 @@ body {
         border-radius: 20px;
     }
 
-    // @media only screen and (max-width: $bp-lgst) {
-    //     margin: 0;
-    //     max-width: 100%;
-    //     width: 100%;
-    //     max-height: 100%;
-    // }
 
     .con {
         display: block;
@@ -303,7 +297,6 @@ body {
         margin: 5rem auto;
         background-color: rgba($color-white, .2);
         box-shadow: 0 1rem 2rem rgba($color-black, .3);
-        // height: 20rem;
         color: $color-black;
         padding: 2.5rem;
         border-radius: 30px;
@@ -346,7 +339,6 @@ body {
 .header {
     font-size: 1.4rem;
     height: 12rem;
-    // background-color: #fff;
     border-bottom: var(--line);
 
     display: flex;
@@ -618,7 +610,7 @@ body {
     }
 }
 
-.test2 {
+.con1, .con2, .person, .test1, .test2 {
     opacity: 0;
 }
 
@@ -633,6 +625,42 @@ body {
         background-color: #3e3d3ba8;
         z-index: 5;
     }
+
+    &-done {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #3e3d3ba8;
+        z-index: 5;
+        .modal-box{
+            max-width: 325px;
+            text-align: center;
+        } 
+        .modal-header {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            .check {
+                color: #55c57a;
+                font-size: 10rem;
+            }
+            .close {
+                position: absolute;
+                cursor: pointer;
+                top: 5px;
+                right: 5px;
+            }
+        }
+        .modal-body {
+            font-size: 2rem;
+            padding: 1rem;
+        }
+    }
+
+    
 
     &-box {
         background-color: $color-white;
@@ -663,26 +691,8 @@ body {
             font-size: 2rem;
             padding: 1rem;
         }
-
-        .modal-footer {
-
-        }
     }
 }
-
-
-// .alert {
-//     width: auto;
-//     position: absolute;
-//     top: -27px;
-//     left: 2%;
-//     font-size: 1.2rem;
-
-//     @include respond(phone) {
-//         left: 50%;
-//         transform: translateX(-50%);
-//     }
-// }
 
 ///////// button ///////
 .btn {
