--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,6 +127,7 @@ html {
 }
 
 body {
+    position: relative;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.6;
@@ -138,6 +139,13 @@ body {
     min-height: 100vh;
     height: 100%;
     box-sizing: border-box;
+    .footer{
+        width: fit-content;
+        font-size: 2rem;
+        font-weight: 900;
+        text-align: center;
+        display: inline;
+    }
 }
 
 ::selection {
