--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -17,7 +17,7 @@
     <h2 class="my-3">Director:</h2>
     <p class="autoras">Javier Vicente Giraldo Jaramillo</p>
 
-    <p class="intro--description">En la presente página web, encontrará los consentimientos informados y cuestionarios
+    <p class="intro--description">En la presente página web, encontrará el consentimeinto informado, asentimiento informado (si es menor de edad) y los cuestionarios
       necesarios para hacer parte de la presente investigación, agradecemos mucho su tiempo y colaboración, su
       participación es muy importante para nosotros. Recuerde leer muy bien antes de avanzar, la totalidad de la
       participación no le llevará mas de 20 minutos. A continuación tendrá la opción de aceptar o no aceptar, libremente
@@ -29,9 +29,9 @@
       <div class="formulario">
         <div class="group">
           <div class="form-group">
-            <label for="" class="">Nombre Completo</label>
+            <label for="" class="">Nombres Completos</label>
             <div class="input-container">
-              <input type="text" class="form-control" placeholder="Nombre Completo" formControlName="nombre"
+              <input type="text" class="form-control" placeholder="Nombres Completos" formControlName="nombre"
                 [class.is-invalid]="nombreNoValido">
               <small *ngIf="nombreNoValido" class="text-danger">
                 Ingrese su nombre completo
@@ -39,9 +39,9 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="" class="">Apellido Completo</label>
+            <label for="" class="">Apellidos Completos</label>
             <div class="input-container">
-              <input type="text" class="form-control" placeholder="Apellido Completo" formControlName="apellido"
+              <input type="text" class="form-control" placeholder="Apellidos Completos" formControlName="apellido"
                 [class.is-invalid]="apellidoNoValido">
               <small *ngIf="apellidoNoValido" class="text-danger">
                 Ingrese su apellido completo
@@ -146,7 +146,7 @@
       PROGRAMA DE PSICOLOGÍA DE LA UNIVERSIDAD SANTO TOMÁS</h2>
     <h3 class="my-4">FACULTAD DE PSICOLOGÍA <br> UNIVERSIDAD SANTO TOMÁS (USTA)</h3>
     <p>Estamos solicitando la colaboración de su hijo como participante en el proyecto de investigación <b>Síndrome de
-        Burnout, funcionamiento familiar y rendimiento académico en estudiantes del programa de psicología de la
+        burnout, funcionamiento familiar y rendimiento académico en estudiantes del programa de psicología de la
         Universidad Santo Tomás. Este proyecto es avalado por la Universidad Santo Tomás.</b> La participación del mismo
       es
       completamente voluntaria y requiere de su autorización y la información que sea consignada en el mismo se
@@ -288,7 +288,7 @@
         </div>
         <div class="group">
           <div class="form-group">
-            <label for="nombreTestigo" class="">Nombre del Testigo</label>
+            <label for="nombreTestigo" class="">Nombre del Testigo (Mayor de edad)</label>
             <div class="input-container">
               <input type="text" class="form-control" placeholder="Nombre del testigo" formControlName="nombreTestigo"
                 [class.is-invalid]="nombreTestigoNoValido">
@@ -354,7 +354,7 @@
     <h2>SÍNDROME DE BURNOUT, FUNCIONAMIENTO FAMILIAR Y RENDIMIENTO ACADÉMICO EN ESTUDIANTES DEL PROGRAMA DE PSICOLOGÍA
       DE LA UNIVERSIDAD SANTO TOMÁS</h2>
     <h3 class="my-4">FACULTAD DE PSICOLOGÍA <br> UNIVERSIDAD SANTO TOMÁS (USTA)</h3>
-    <p>Estamos solicitando su colaboración como participante en el proyecto de investigación <b>Síndrome de Burnout,
+    <p>Estamos solicitando su colaboración como participante en el proyecto de investigación <b>Síndrome de burnout,
         funcionamiento familiar y rendimiento académico en estudiantes del programa de psicología de la Universidad
         Santo Tomás.</b> Este proyecto es avalado por la Universidad Santo Tomás. Su participación es completamente
       voluntaria y la información aquí consignada se mantendrá anónima, es confidencial y sólo será utilizada con fines
@@ -399,7 +399,7 @@
     <h3>¿POR QUÉ USTED PUEDE PARTICIPAR EN ESTA INVESTIGACIÓN?</h3>
     <p class="mt-4">Usted puede participar en esta investigación si cumple con los siguientes requisitos:</p>
     <ul class="my-4">
-      <li>Es mayor de 18 años o de ser menor, tiene el consentimiento de su padre para su participación.</li>
+      <li>Es mayor de 18 años o de ser menor, tiene el consentimiento de sus padres o representante legal para su participación.</li>
       <li>Se encuentra en compañía de un testigo mayor de edad al momento de diligenciar el presente consentimiento o
         asentimiento informado.</li>
       <li>Es actualmente estudiante del programa de psicología de la Universidad Santo Tomás- Bogotá </li>
@@ -640,7 +640,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>2. Creo que contribuyo efectivamente con las clases en la universidad</p>
+        <p>2. Creo que contribuyo efectivamente con las clases en la universidad.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -752,7 +752,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>4. Puedo resolver de manera eficaz los problemas relacionados con mis estudios</p>
+        <p>4. Puedo resolver de manera eficaz los problemas relacionados con mis estudios.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -808,7 +808,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>5. Me estimula conseguir objetivos en mis estudios</p>
+        <p>5. Me estimula conseguir objetivos en mis estudios.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -864,7 +864,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>6. Me encuentro agotado físicamente al final de un día de la universidad </p>
+        <p>6. Me encuentro agotado físicamente al final de un día de la universidad.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -920,7 +920,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>7. Estoy exhausto de tanto estudiar</p>
+        <p>7. Estoy exhausto de tanto estudiar.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -976,7 +976,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>8. Estoy cansado en la mañana cuando me levanto y tengo que afrontar otro día de la universidad</p>
+        <p>8. Estoy cansado en la mañana cuando me levanto y tengo que afrontar otro día de la universidad.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1032,7 +1032,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>9. Las actividades académicas de esta carrera me tienen emocionalmente agotado</p>
+        <p>9. Las actividades académicas de esta carrera me tienen emocionalmente agotado.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1088,7 +1088,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>10. Estudiar o ir a clases todo el día es una tensión para mí</p>
+        <p>10. Estudiar o ir a clases todo el día es una tensión para mí.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1144,7 +1144,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>11. He perdido interés en la carrera desde que empecé en la universidad</p>
+        <p>11. He perdido interés en la carrera desde que empecé en la universidad.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1200,7 +1200,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>12. He perdido entusiasmo por mi carrera</p>
+        <p>12. He perdido entusiasmo por mi carrera.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1256,7 +1256,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>13. He distanciado en mis estudios porque pienso que no serían realmente útiles </p>
+        <p>13. Me he distanciado en mis estudios porque pienso que no serán realmente útiles.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1312,7 +1312,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>14. Dudo de la importancia y valor de mis estudios</p>
+        <p>14. Dudo de la importancia y valor de mis estudios.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1368,7 +1368,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>15 He aprendido muchas cosas interesantes durante mi carrera</p>
+        <p>15. He aprendido muchas cosas interesantes durante mi carrera.</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1437,7 +1437,7 @@
 
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>1. En mi opinión soy buen estudiante.</p>
+        <p>1. ¿ Está satisfecho con la ayuda que recibe de su familia cuando tiene un problema ?</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1465,7 +1465,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>2. Creo que contribuyó efectivamente con las clases en la universidad</p>
+        <p>2. ¿ Conservan entre ustedes los problemas que tienen en casa ?</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1493,7 +1493,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>3. Durante las clases tengo la seguridad de que soy eficaz en la finalización de la cosas.</p>
+        <p>3. ¿ Las decisiones importante se toman en conjunto en la casa ?</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1521,7 +1521,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>4. Puedo resolver de manera eficaz los problemas relacionados con mis estudios</p>
+        <p>4. ¿ Está satisfecho con el tiempo que usted y su familia pasan juntos ?</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1549,7 +1549,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>5. me estimula conseguir objetivos en mis estudios</p>
+        <p>5. ¿ Siente que su familia lo quiere ?</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
