--- a/src/styles.scss
+++ b/src/styles.scss
@@ -145,6 +145,7 @@ body {
         font-weight: 900;
         text-align: center;
         display: inline;
+        color: $color-black;
     }
 }
 
