--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,6 +146,9 @@ body {
         text-align: center;
         display: inline;
         color: $color-black;
+        p {
+            color: #000;
+        }
     }
 }
 
