--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1465,7 +1465,7 @@
     </div>
     <div class="question-box">
       <div class="question mb-4 mb-md-0">
-        <p>2. ¿ Conservan entre ustedes los problemas que tienen en casa ?</p>
+        <p>2. ¿ Conversan entre ustedes los problemas que tienen en casa ?</p>
       </div>
       <div class="answer-box mb-3 mb-md-0">
         <div class="answer">
@@ -1575,7 +1575,7 @@
         </div>
       </div>
     </div>
-    <button class="btn btn-success" (click)="test2Done()">SIGUIENTE</button>
+    <button class="btn btn-success" (click)="test2Done()">FINALIZAR</button>
 
     <!-- {{user.cuestionario2 | json}} -->
   </div>
