--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -278,6 +278,7 @@ body {
 .main-container {
     max-width: 120rem;
     margin: 4rem auto;
+    margin-bottom: 2rem;
     background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
     min-height: 20rem;
